Updated the index file

--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,7 @@
     </div>
     <img id="logo" src="https://fattirebiketours.com/app/uploads/2021/11/paris-olympics-eiffel-tower-2024.jpg"
         alt="Olympics">
-    <h1>About Jovian</h1>
+    <h1>Welcome to Jovian</h1>
 
 
 
@@ -32,7 +32,7 @@
         <div id="ct">
             <p style="margin-top:0" ;>An online teaching platform
                 for web technologies.
-                we have industry certified experts over <span style="color:Red;">20</span> years across the
+                we have highly industry certified experts over <span style="color:Red;">20</span> years across the
                 world.Generate random paragraphs for creative writing, writers' block, programming or other purposes.
                 Choose the
                 number of paragraphs and get free, human-written text with different topics and stylesse</p>
