changed about joviam

--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,7 @@
     </div>
     <img id="logo" src="https://fattirebiketours.com/app/uploads/2021/11/paris-olympics-eiffel-tower-2024.jpg"
         alt="Olympics">
-    <h1>Welcome to Jovian</h1>
+    <h1>About Jovian</h1>
 
 
 
