changed the title

--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <title>
-        my first web page
+        Jovian Careers
     </title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -22,7 +22,7 @@
     </div>
     <img id="logo" src="https://fattirebiketours.com/app/uploads/2021/11/paris-olympics-eiffel-tower-2024.jpg"
         alt="Olympics">
-    <h1>welcome to  Jovian</h1>
+    <h1>About  Jovian</h1>
 
 
 
