--- a/src/index.html
+++ b/src/index.html
@@ -2,6 +2,17 @@
 <html>
 
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Learn about career oppurtunities at 
+    jovian and apply for a job role">
+    <meta name="robots" content="index,follow"> 
+    <meta name="keywords" content="jobs">
+    <meta property="og:title" content="Jovian career site">
+    <meta property="og:description" content="Learn about career oppurtunities at 
+    jovian and apply for a job role">
+    <meta property="og:image" content="jovian_name.jpg">
+
     <title>
         Jovian Careers
     </title>
@@ -10,7 +21,7 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
         rel="stylesheet">
-    <link rel="icon" type="image/x-icon" href="/images/favicon.jpg">
+    <link rel="icon" type="image/x-icon" href="favicon.jpg">
     <link rel="stylesheet" href="style.css">
 </head>
 
