changed the title

--- a/src/index.html
+++ b/src/index.html
@@ -8,13 +8,13 @@
     jovian and apply for a job role">
     <meta name="robots" content="index,follow"> 
     <meta name="keywords" content="jobs">
-    <meta property="og:title" content="Jovian career site">
+    <meta property="og:title" content="Jovian career site | Build a successful career at tech">
     <meta property="og:description" content="Learn about career oppurtunities at 
     jovian and apply for a job role">
     <meta property="og:image" content="jovian_name.jpg">
 
     <title>
-        Jovian Careers
+        Jovian Careers | Build a successful career at tech
     </title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
