--- a/src/index.html
+++ b/src/index.html
@@ -7,12 +7,12 @@
     <meta name="description" content="Learn about career oppurtunities at 
     jovian and apply for a job role">
     <meta name="robots" content="index,follow"> 
-    <meta name="image" content="jovian_name.jpg">
+   
     <meta name="keywords" content="jobs">
     <meta property="og:title" content="Jovian career site | Build a successful career at tech">
     <meta property="og:description" content="Learn about career oppurtunities at 
     jovian and apply for a job role">
-    <meta property="og:image" content="jovian_name.jpg">
+    <meta property="og:image" content="/jovian_name.jpg">
 
     <title>
         Jovian Careers | Build a successful career at tech
