added favicon as meta image

--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
     <meta property="og:title" content="Jovian career site | Build a successful career at tech">
     <meta property="og:description" content="Learn about career oppurtunities at 
     jovian and apply for a job role">
-    <meta property="og:image" content="/jovian_name.jpg">
+    <meta property="og:image" content="/favicon.jpg">
 
     <title>
         Jovian Careers | Build a successful career at tech
