created a new branch for responsive design

--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
     <meta property="og:image" content="https://metatags.io/images/meta-tags.png">
 
     <title>
-        Jovian Careers | Build a successful career at tech
+       jovian careers
     </title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -29,10 +29,12 @@
 
 <body>
     <div id="navbar">
-        <img id="pic" alt="jovian logo"
+        <img id="pic"  alt="jovian logo" src="logo.png">
+        <img id="picwithname" style="height:100px" alt="jovian logo with name"
             src="https://bookface-images.s3.amazonaws.com/logos/9c630503bfaf09e017d40c97dae09e6521a73c2d.png?1620030217">
+            
     </div>
-    <img id="logo" src="https://fattirebiketours.com/app/uploads/2021/11/paris-olympics-eiffel-tower-2024.jpg"
+    <img id="logo" style="height:100px" " src="https://fattirebiketours.com/app/uploads/2021/11/paris-olympics-eiffel-tower-2024.jpg"
         alt="Olympics">
     <h1>About  Jovian</h1>
 
@@ -66,7 +68,7 @@
         </div>
 
         <div id="ct2">
-            <img id="team" src="download.jpg" alt="teamwork" height="200" width="80%">
+            <img id="team" style="height:100px; width:100px" src="download.jpg" alt="teamwork" height="200" width="80%">
         </div>
     </div>
 
