--- a/src/index.html
+++ b/src/index.html
@@ -29,12 +29,12 @@
 
 <body>
     <div id="navbar">
-        <img id="pic"  alt="jovian logo" src="logo.png">
-        <img id="picwithname" style="height:100px" alt="jovian logo with name"
+        <img id="pic"   alt="jovian logo" src="logo.png">
+        <img id="picwithname"  alt="jovian logo with name"
             src="https://bookface-images.s3.amazonaws.com/logos/9c630503bfaf09e017d40c97dae09e6521a73c2d.png?1620030217">
             
     </div>
-    <img id="logo" style="height:100px" " src="https://fattirebiketours.com/app/uploads/2021/11/paris-olympics-eiffel-tower-2024.jpg"
+    <img id="logo"  " src="https://th.bing.com/th/id/OIP.g-U_1g8bBKL7CQl6Der9VwHaEK?rs=1&pid=ImgDetMain"
         alt="Olympics">
     <h1>About  Jovian</h1>
 
@@ -68,7 +68,7 @@
         </div>
 
         <div id="ct2">
-            <img id="team" style="height:100px; width:100px" src="download.jpg" alt="teamwork" height="200" width="80%">
+            <img id="team" src="download.jpg" alt="teamwork" >
         </div>
     </div>
 
